@@ -20,6 +20,7 @@ The following bugs have been fixed in the 1.5.1 release.
 
 K  5924	IMAP provider should support the QRESYNC extension (RFC 5162)
 K  5925	IMAP provider should support the WITHIN search extension (RFC 5032)
+K  5934	method fill() isn't synchronized correctly in SharedFileInputStream
 
 
 		  CHANGES IN THE 1.5.0 RELEASE
